<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/GalaxyFeedbackDialogTheme"
    tools:context=".widget.GalaxyFeedbackDialog">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gap_normal"
        android:hint="@string/feedback_hint"
        app:errorEnabled="true"
        app:errorContentDescription="@string/feedback_validation_error_message"
        app:errorIconDrawable="@android:drawable/stat_notify_error"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedback_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:lines="5"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingStart="@dimen/gap_normal"
        android:paddingEnd="@dimen/gap_normal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="@dimen/gap_normal"
            android:layout_marginEnd="@dimen/gap_normal"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginStart="@dimen/gap_normal"
            style="@style/ThemeOverlay.Material3.Button"/>

    </LinearLayout>

</LinearLayout>