<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/gap_small"
    android:theme="@style/GalaxySettingDialogTheme"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".widget.GalaxySettingDialog">
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_normal"
        android:layout_marginStart="@dimen/gap_recommend"
        android:layout_marginEnd="@dimen/gap_recommend"
        android:hint="@string/font_size">
        <AutoCompleteTextView
            android:id="@+id/fontSizeText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/gap_recommend"
        android:layout_marginStart="@dimen/gap_recommend"
        android:layout_marginEnd="@dimen/gap_recommend"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/glassy"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:padding="@dimen/gap_small"
            android:layout_weight="1"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/glassyStateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/gap_small"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_big"
            android:textStyle="bold"
            android:text="50%"/>
    </LinearLayout>
    <com.google.android.material.slider.Slider
        android:id="@+id/glassySlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_recommend"
        android:layout_marginEnd="@dimen/gap_recommend"
        android:value="50"
        android:valueFrom="0"
        android:valueTo="100"
        android:stepSize="25"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/gap_recommend"
        android:layout_marginStart="@dimen/gap_recommend"
        android:layout_marginEnd="@dimen/gap_recommend"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/skin"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:padding="@dimen/gap_small"
            android:layout_weight="1"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/skinStateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/gap_small"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_big"
            android:textStyle="bold"
            android:text="@string/black"/>
    </LinearLayout>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/skinColorGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/gap_small"
        android:layout_marginStart="@dimen/gap_recommend"
        android:layout_marginEnd="@dimen/gap_recommend"
        app:singleSelection="true">
        <com.google.android.material.chip.Chip
            android:id="@+id/redChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedIconTint="@color/white"
            app:chipBackgroundColor="@color/colorRed"
            android:textColor="@color/white"
            android:text="@string/red"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/blueChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedIconTint="@color/white"
            app:chipBackgroundColor="@color/colorBlue"
            android:textColor="@color/white"
            android:text="@string/blue"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/greenChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedIconTint="@color/white"
            app:chipBackgroundColor="@color/colorGreen"
            android:textColor="@color/white"
            android:text="@string/green"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/orangeChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedIconTint="@color/white"
            app:chipBackgroundColor="@color/colorOrange"
            android:textColor="@color/white"
            android:text="@string/orange"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/purpleChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedIconTint="@color/white"
            app:chipBackgroundColor="@color/colorPurple"
            android:textColor="@color/white"
            android:text="@string/purple"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/blackChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:checked="true"
            app:checkedIconTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="@color/colorBlack"
            android:textColor="@color/white"
            android:text="@string/black"/>
    </com.google.android.material.chip.ChipGroup>
</LinearLayout>