<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/app_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <EditText
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enableButton"
        android:layout_width="@dimen/button_big"
        android:layout_height="wrap_content"
        android:text="@string/enable_keyboard"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_big"
        android:padding="@dimen/gap_big"
        android:layout_margin="@dimen/gap_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintVertical_chainStyle="packed"
        app:backgroundTint="@color/enableButtonColor"
        style="@style/Widget.Material3.Button.ElevatedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="@dimen/button_big"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_big"
        android:padding="@dimen/gap_big"
        android:layout_margin="@dimen/gap_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enableButton"
        app:layout_constraintBottom_toTopOf="@id/settingButton"
        app:layout_constraintVertical_chainStyle="packed"
        app:backgroundTint="@color/loginButtonColor"
        style="@style/Widget.Material3.Button.ElevatedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingButton"
        android:layout_width="@dimen/button_big"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_big"
        android:padding="@dimen/gap_big"
        android:layout_margin="@dimen/gap_big"
        app:backgroundTint="@color/settingButtonColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/Widget.Material3.Button.ElevatedButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>